src/gallium/include/pipe/p_video_state.h
@@ -375,10 +375,6 @@ struct pipe_h264_pps
    int8_t   second_chroma_qp_index_offset;
 };
 
-struct h264_private {
-   struct pipe_video_buffer *past_ref[16];
-};
-
 struct pipe_h264_picture_desc
 {
    struct pipe_picture_desc base;
@@ -404,9 +400,6 @@ struct pipe_h264_picture_desc
    uint32_t frame_num_list[16];
 
    struct pipe_video_buffer *ref[16];
-
-   /* using private as a parameter name conflicts with C++ keywords */
-   void    *priv;
 
    struct
    {
